--- a/scss/layout/_wrapper-movies.scss
+++ b/scss/layout/_wrapper-movies.scss
@@ -1,4 +1,9 @@
 .wrapper-movies {
 	@include grid-row(2);
 	@include grid-column(2);
+
+	@include grid-override("edge") {
+		margin-left: 5px;
+		margin-right: 5px;
+	}
 }
