--- a/scss/modules/_user-info.scss
+++ b/scss/modules/_user-info.scss
@@ -6,9 +6,14 @@
 	border-radius: 10px;
 	font-family: map-get($fonts, custom);
 	background-color: map-get($color, 05);
+
+	@include grid-override("edge") {
+		margin-right: 5px;
+	}
 }
 
 .user-info--checkout {
+	@include grid-row(2);
 	@include grid-column(2);
 }
 
